tests/machine/x/go/inner_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/inner_join.go:13:17: undefined: Customer
../../../tests/machine/x/go/inner_join.go:16:5: undefined: Customer
../../../tests/machine/x/go/inner_join.go:19:5: undefined: Customer
../../../tests/machine/x/go/inner_join.go:23:14: undefined: Order
../../../tests/machine/x/go/inner_join.go:24:3: undefined: Order
../../../tests/machine/x/go/inner_join.go:29:3: undefined: Order
../../../tests/machine/x/go/inner_join.go:34:3: undefined: Order
../../../tests/machine/x/go/inner_join.go:39:3: undefined: Order
../../../tests/machine/x/go/inner_join.go:45:21: undefined: Result
../../../tests/machine/x/go/inner_join.go:46:16: undefined: Result
../../../tests/machine/x/go/inner_join.go:46:16: too many errors

1: //go:build ignore
