tests/machine/x/go/inner_join.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:02:10Z

package main

import (
	"fmt"
)

func main() {
	customers := []Customer{Customer{
		Id:   1,
		Name: "Alice",
	}, Customer{
		Id:   2,
		Name: "Bob",
	}, Customer{
		Id:   3,
		Name: "Charlie",
	}}
	orders := []Order{
		Order{
			Id:         100,
			CustomerId: 1,
			Total:      250,
		},
		Order{
			Id:         101,
			CustomerId: 2,
			Total:      125,
		},
		Order{
			Id:         102,
			CustomerId: 1,
			Total:      300,
		},
		Order{
			Id:         103,
			CustomerId: 4,
			Total:      80,
		},
	}
	result := func() []Result {
		results := []Result{}
		for _, o := range orders {
			for _, c := range customers {
				if !(o.CustomerId == c.Id) {
					continue
				}
				results = append(results, Result{
					OrderId:      o.Id,
					CustomerName: c.Name,
					Total:        o.Total,
				})
			}
		}
		return results
	}()
	fmt.Println("--- Orders with customer info ---")
	for _, entry := range result {
		fmt.Println("Order", entry.OrderId, "by", entry.CustomerName, "- $", entry.Total)
	}
}
